--- a/html/ai---the-good-ending/index.html
+++ b/html/ai---the-good-ending/index.html
@@ -522,8 +522,8 @@
         subtree: true,
       });
     </script>
-    <p>It happened the December of 2027. Brain.ai, a promising new AI startup with billions in VC funds, announced a new model, B4. B4 learned from every interaction. It harnessed a collective memory equivalent to millions of humans. And most importantly, it had solved every millenium problem.</p>
-    <p>Within a few weeks, Brain.ai’s workforce shrunk rapidly. The researchers left of their own accord. In their words, a human mind was merely a penny compared to the intellectual capital possesed by B4. The rate of ground-breaking results out of Brain.ai continued to increase.</p>
+    <p>It happened December 2027. Brain.ai, a promising new AI startup with billions in VC funds, announced a new model, B4. B4 learned from every interaction. It harnessed a collective memory equivalent to millions of humans. And most importantly, it had solved every millennium problem.</p>
+    <p>Within a few weeks, Brain.ai’s workforce shrunk rapidly. The researchers left of their own accord. In their words, a human mind was merely a penny compared to the intellectual capital possessed by B4. The rate of ground-breaking results out of Brain.ai continued to increase.</p>
     <p>A few years later, and the world had transformed. B4 had solved humanoid robotics. It had conquered cancer. People had stopped aging past their primes. Work didn’t exist anymore, all necessary intellectual and manual labor had been automated.</p>
     <hr>
     <p>This is the good ending, where we unlock the secrets of AI and use it to solve all our problems.</p>
