--- a/html/cmu-db1/index.html
+++ b/html/cmu-db1/index.html
@@ -522,7 +522,7 @@
         subtree: true,
       });
     </script>
-    <p><strong>OLTP</strong>: Online Transaction Processing, transactions are usually row-based, i.e we dump a new person into our database, we modify a person’s fields etec.</p>
+    <p><strong>OLTP</strong>: Online Transaction Processing, transactions are usually row-based, i.e. we dump a new person into our database, we modify a person’s fields etc.</p>
     <p><strong>OLAP</strong>: Online Analytical Processing, transactions usually operate on an entire column of data, e.g. compute the mean and std of all client latencies.</p>
     <p>Over the years, there have been various generations of database technologies.</p>
     <ol>
@@ -535,7 +535,7 @@
     <p>Now that data is managed by an external service with a limited API, data is often pulled to the query, although with some caveats because providers may allow some degree of filtering.</p>
     <p><strong>Shared-Nothing</strong>: Each node of the Database has its own cpu, memory, etc.</p>
     <p><strong>Shared-Disk</strong>: Each node of the Database has to interface with some common API to access data resources.</p>
-    <p>Shared-Nothing has potentially higher performance because you can control precisely what data is transferred. However, it’s compute layer cannnot scale indepdendently from its data layer, and scaling is also just way harder because you have to shuffle a ton of data around.</p>
+    <p>Shared-Nothing has potentially higher performance because you can control precisely what data is transferred. However, it’s compute layer cannot scale independently from its data layer, and scaling is also just way harder because you have to shuffle a ton of data around.</p>
     <p>Historically, Shared-Disk was pretty terrible, but these days there exist infinitely scalable and high performance providers of such services. There are also a lot of things you can do, like caching, or writing your own libraries to bypass the page table, so on and so forth.</p>
   </body>
 </html>
