--- a/html/rationality/index.html
+++ b/html/rationality/index.html
@@ -545,8 +545,8 @@
         </ol>
       </div>
     </div>
-    <p>Another way to think about it is <a href="#Values">Values</a> are your axioms, and <a href="#Rationalism">Rationalism</a> is constraint propogation.</p>
-    <p>I find this distinction important because the two concepts can be easily mixed up, and seperating them allows answering a few questions.</p>
+    <p>Another way to think about it is <a href="#Values">Values</a> are your axioms, and <a href="#Rationalism">Rationalism</a> is constraint propagation.</p>
+    <p>I find this distinction important because the two concepts can be easily mixed up, and separating them allows answering a few questions.</p>
     <h3>Can two rational people “agree to disagree”?</h3>
     <p>The thinking here is that two rationalists should not be able to hold opposing viewpoints on the same issue given the same evidence. However, that’s not true. The two rationalists could simply have different <a href="#Values">Values</a>, and therefore the “rational” choice for both of them need not be the same. The key point is rationality is not by itself a value system. It can’t be used to prove your value axioms are true.</p>
     <h3>Is “being positive” irrational?</h3>
@@ -555,8 +555,8 @@
       <li>I tell myself that instead of slim odds of doing great research, I have massive odds!</li>
       <li>I tell myself, isn’t it great that I’m in a position where I can spend my time investigating the things that interest me most? Maybe I won’t change the world, but I’ll push the field forward while pursuing my passion.</li>
     </ol>
-    <p>Approach 1 manipulated the truth. Approach 2 updated our <a href="#Values">Values</a>. Both approaches led to to a better assessment of how things are, but Approach 2 didn’t require lying to ourselves.</p>
-    <p>So “being positive” doesn’t require being irrational. That’s great, because Approach 1 is not stable. If the truth scares you enough that you need to lie to yourself to proceed, then you should seriously consider whether its worth it to proceed. In the example, imagine the researcher was really only interested in producing ground-breaking work with high odds. If that really wasn’t possible to the best of anyone’s knowledge, he’s probably better off quiting. Maybe he’d get lucky and publish a breakthrough if he persisted, but most likely he wouldn’t and would spend his career feeling dissapointed.</p>
+    <p>Approach 1 manipulated the truth. Approach 2 updated our <a href="#Values">Values</a>. Both approaches led to a better assessment of how things are, but Approach 2 didn’t require lying to ourselves.</p>
+    <p>So “being positive” doesn’t require being irrational. That’s great, because Approach 1 is not stable. If the truth scares you enough that you need to lie to yourself to proceed, then you should seriously consider whether it’s worth it to proceed. In the example, imagine the researcher was really only interested in producing ground-breaking work with high odds. If that really wasn’t possible to the best of anyone’s knowledge, he’s probably better off quitting. Maybe he’d get lucky and publish a breakthrough if he persisted, but most likely he wouldn’t and would spend his career feeling disappointed.</p>
     <h3>Can a Rational person be an optimist?</h3>
     <p>This seems almost like a contradiction at first glance. The truth doesn’t care what makes you happy. The truth just <em>is</em>. So then, is it really possible to be rational and consistently feel happy, or does this require some kind of self-deception?</p>
     <p>It doesn’t require self-deception. This is because what is “good” and “positive” is an inherently value-based thing. The truth might not care what makes you happy, but you get to decide what makes you happy, as least to some extent. You can choose to derive happiness from all that you have, or to derive sadness from all that you lack. Neither is “irrational”, they are both two different weightings of the same situation. Hence, the optimist need not be irrational.</p>
