--- a/html/thinking1/index.html
+++ b/html/thinking1/index.html
@@ -572,7 +572,7 @@
       </li>
     </ol>
     <p>A lot of people are a mix. I think (1), (2), (3, 4, 5), and (4, 5, 6) are the most common types of people I’ve met.</p>
-    <p>Recently I’ve found out a lot of highly intelligent people are not even interested in category 7. Apparently, at top schools aspects 3 and 4 are dominant motivations for a lot of people (e.g. everybody wants to do Quant). Perhaps its because getting into such schools requires optimizing really aggressively for the metrics schools care about (performance in competition X), so everyone there is biased towards maximizing category 4. Still, I was under the impression that this was a minority of students, not an overwhelming majority.</p>
+    <p>Recently I’ve found out a lot of highly intelligent people are not even interested in category 7. Apparently, at top schools aspects 3 and 4 are dominant motivations for a lot of people (e.g. everybody wants to do Quant). Perhaps it’s because getting into such schools requires optimizing really aggressively for the metrics schools care about (performance in competition X), so everyone there is biased towards maximizing category 4. Still, I was under the impression that this was a minority of students, not an overwhelming majority.</p>
     <p>I don’t get how category 7 doesn’t interest people. Surely if you were presented the choice between two potential workplaces this should be a big factor. If it really means nothing, I guess how do you define your purpose in life? Like, is the purpose of life to just maximize your personal happiness?</p>
     <p>Maybe there’s nothing wrong with that. I just think it’s a waste of talent and time. And I personally don’t see how people could find it fulfilling.</p>
   </body>
