--- a/html/what-i-want/index.html
+++ b/html/what-i-want/index.html
@@ -522,7 +522,7 @@
         subtree: true,
       });
     </script>
-    <p>Initially, CS interested me because you could have enormous social impact, provided you could solve some very hard problems (e.x. Alphafold). I think there’s been somewhat of a value drift from “I want to solve hard problems to do good things” to “I want to solve hard problems”.</p>
+    <p>Initially, CS interested me because you could have enormous social impact, provided you could solve some very hard problems (e.x. AlphaFold). I think there’s been somewhat of a value drift from “I want to solve hard problems to do good things” to “I want to solve hard problems”.</p>
     <p>The more I think about, the less interesting doing something without social impact seems to me. I feel like it’s quite possible I could spend my career solving challenging problems, and then look back on it all and think it’s entirely worthless. So, I’m going to put more effort into finding companies and roles which have good social impact.</p>
     <p>Social impact is a bit of a vague term. For me, it’s about doing something which would improve the lives of the many in an important way.</p>
     <ul>
