--- a/html/agency/index.html
+++ b/html/agency/index.html
@@ -523,7 +523,7 @@
       });
     </script>
     <p>I think a reasonable way to think of life is to imagine you are stuck in a river.</p>
-    <p><strong>environment</strong>: The river. It does not completely determine where you are going but it has undeniable influence. If the river is flowing very fast, there may be little you can do.</p>
+    <p><strong>environment</strong>: The river. It does not completely determine where you are going, but it has undeniable influence. If the river is flowing very fast, there may be little you can do.</p>
     <p><strong>agency</strong>: The desire, will, and initiative to steer yourself. This doesn’t mean you can do anything, your swimming abilities are not infinite. Nonetheless, a high-agency person seeks to shape their trajectory as much as possible.</p>
     <p><strong>self-confidence</strong>: How much you think you can change your trajectory.</p>
     <p><strong>self-worth</strong>: An assessment of what trajectory you think you deserve. Do you deserve to get out of the river?</p>
