--- a/html/sselection/index.html
+++ b/html/sselection/index.html
@@ -525,8 +525,8 @@
     <p>The canonical answer in biology class is “genetic diversity”, but this isn’t such an obvious win. Here are some of the disadvantages.</p>
     <ol>
       <li>Imagine I have a sexual population equal parts male and female. If every female gives birth to two children, then the population size won’t change. In an asexual population, every individual can reproduce, and so the population size could’ve doubled. Hence, sexual populations need to work much harder to maintain growth.</li>
-      <li>Suppose I’ve evolved a really good set of genes. In an asexual population, my set of genes would get propogated, virtually unchanged, to the next generation. In a sexual population, half the genes would get thrown out and replaced with my mate’s dna. In this case, sexual selection actually made my descendents do worse!</li>
-      <li>Another way to view the above is with cards. Let’s say I’m playing a card game and drew a really good hand. If I had the choice between keeping my hand and mixing it with someone elses, I would probably keep my hand, because I know in the next round the hand will still be good. Sexual selection, on the other hand, would have me shuffle some cards in from the deck.</li>
+      <li>Suppose I’ve evolved a great set of genes. In an asexual population, my set of genes would get propagated, virtually unchanged, to the next generation. In a sexual population, half the genes would get thrown out and replaced with my mate’s DNA. For this case, sexual selection actually made my descendants do worse!</li>
+      <li>Another way to view the above is with cards. Let’s say I’m playing a card game and drew a excellent hand. If I had the choice between keeping my hand and mixing it with someone else’s, I would probably keep my hand, because I know in the next round the hand will still be good. Sexual selection, on the other hand, would have me shuffle some cards in from the deck.</li>
     </ol>
     <p>So then why is sexual reproduction so common?</p>
     <ol>
@@ -534,11 +534,11 @@
       <li>
         <p>Asexual selection suffers from many forms of internal gene competition.</p>
         <ul>
-          <li>If two good mutations arise at the same time, the two will battle it out for dominance. In a sexual population, the two traits could stack rather then compete.</li>
-          <li>Asexual populations rely on a class of highly fit individuals to pass on the good genes. If those invididuals were to die, then the population is screwed. Sexual populations are capable of reproducing that set of highly fit individuals every generation. Sexual populations are “fault-tolerant”.</li>
+          <li>If two good mutations arise at the same time, the two will battle it out for dominance. In a sexual population, the two traits could stack rather than compete.</li>
+          <li>Asexual populations rely on a class of highly fit individuals to pass on the good genes. If those individuals were to die, then the population is screwed. Sexual populations are capable of reproducing that set of highly fit individuals every generation. Sexual populations are “fault-tolerant”.</li>
         </ul>
       </li>
-      <li>Bad traits can “go along for the ride” in asexual populations. E.g. whatever traits (good or bad) are on the members of the species with dominant positive mutations will eventually become a part of the entire population. In sexual populations, the set of traits on the fit organism are not as coupled, allowing deleterous mutations to die off.</li>
+      <li>Bad traits can “go along for the ride” in asexual populations. E.g. whatever traits (good or bad) are on the members of the species with dominant positive mutations will eventually become a part of the entire population. In sexual populations, the set of traits on the fit organism are not as coupled, allowing deleterious mutations to die off.</li>
     </ol>
   </body>
 </html>
