--- a/html/ai---the-good-ending/index.html
+++ b/html/ai---the-good-ending/index.html
@@ -529,5 +529,7 @@
     <p>This is the good ending, where we unlock the secrets of AI and use it to solve all our problems.</p>
     <p>I’ve often found myself filled with a bit of dread at this supposed utopia. All my life, I’ve thought that hedonism (pleasure for pleasure’s sake) is a shallow way of living. That one should work hard and should strive to make the world a better place. But in this utopia, there’s no strife. There’s no need for people to work hard, hedonism is practically the only style of life you <em>can</em> live.</p>
     <p>In the same way that modern society no longer values the ability to hunt or gather berries, I can’t imagine future societies will value hard work, discipline, or curiosity. Perhaps we’ll all get used to it, but I can’t help but feel that humanity will have lost something important.</p>
+    <hr>
+    <p>This post got cut because I read this <a href="https://scottaaronson.blog/?p=9030">post</a>, which articulated my sense of dread so clearly it felt like it would be redundant to re-write it here. Give it a read! As a sidenote, I’m more optimistic than my writing might have made it seem. This was merely an attempt to articulate what I fear.</p>
   </body>
 </html>
