--- a/html/ggs1/index.html
+++ b/html/ggs1/index.html
@@ -526,7 +526,7 @@
     <p>According to the book, about 95% of Native Americans died due disease. This is kind of an insane number, so here is my attempt to rationalize it.</p>
     <p><strong>Claim:</strong> The disease’s high death rate would’ve prevented it from spreading.</p>
     <ol>
-      <li><strong>Counterpoint:</strong>: For a disease to spread, it needs to spread faster than it dies. If it can spread before it kills the host, then it can continue to proliferate. Hence, it could be deadly and continue to spread.</li>
+      <li><strong>Counterpoint:</strong> For a disease to spread, it needs to spread faster than it dies. If it can spread before it kills the host, then it can continue to proliferate. Hence, it could be deadly and continue to spread.</li>
     </ol>
     <p><strong>Claim:</strong> There is an evolutionary incentive to not kill the host, since then the host can continue to spread the virus for longer (and potentially get infected later). Hence, the diseases should not have been so deadly.</p>
     <ol>
