gake callouts nicer

--- a/html/rationality/index.html
+++ b/html/rationality/index.html
@@ -522,28 +522,24 @@
         subtree: true,
       });
     </script>
-    <div id="Rationalism" style>
-      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;">
-        <div style="column-count: 2; column-gap: 2em;">
-          <div style="text-align: left;vertical-align: text-top" class="align"><strong>Rationalism</strong></div>
-        </div>
+    <div id="Rationalism" style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:8pt;">
+      <div style="column-count: 2; column-gap: 2em;">
+        <div style="text-align: left;vertical-align: text-top" class="align"><strong>Rationalism</strong></div>
       </div>
-      <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 8pt; padding-bottom: 8pt; background: #edf1d6; border-radius: 4pt; border-color: #609966; border-width: 2pt; border-style: solid; position: relative; margin-top:4pt;">A reasoning framework for estimating the truth. It cannot answer questions about what a “good” decision or “bad” decision by itself. For that you need a set of values.</div>
     </div>
-    <div id="Values" style>
-      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;">
-        <div style="column-count: 2; column-gap: 2em;">
-          <div style="text-align: left;vertical-align: text-top" class="align"><strong>Values</strong></div>
-        </div>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt;">A reasoning framework for estimating the truth. It cannot answer questions about what a “good” decision or “bad” decision by itself. For that you need a set of values.</div>
+    <div id="Values" style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:8pt;">
+      <div style="column-count: 2; column-gap: 2em;">
+        <div style="text-align: left;vertical-align: text-top" class="align"><strong>Values</strong></div>
       </div>
-      <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 8pt; padding-bottom: 8pt; background: #edf1d6; border-radius: 4pt; border-color: #609966; border-width: 2pt; border-style: solid; position: relative; margin-top:4pt;">
-        <p>Your <em>objective function</em>. There is no “true” objective function, no formula derived from the laws of physics that tells us how to compute the utility of a human life, so that we can maximize it in aggregate. Nonetheless, there are still some properties your set of values should strive for.</p>
-        <ol>
-          <li>Self-Consistency: No subset of values can be used to deduce another value is false.</li>
-          <li>Transitivity: A > B and B > C implies A > C.</li>
-          <li>Comparability: Any two decisions can be scored.</li>
-        </ol>
-      </div>
+    </div>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt;">
+      <p>Your <em>objective function</em>. There is no “true” objective function, no formula derived from the laws of physics that tells us how to compute the utility of a human life, so that we can maximize it in aggregate. Nonetheless, there are still some properties your set of values should strive for.</p>
+      <ol>
+        <li>Self-Consistency: No subset of values can be used to deduce another value is false.</li>
+        <li>Transitivity: A > B and B > C implies A > C.</li>
+        <li>Comparability: Any two decisions can be scored.</li>
+      </ol>
     </div>
     <p>Another way to think about it is <a href="#Values">Values</a> are your axioms, and <a href="#Rationalism">Rationalism</a> is constraint propagation.</p>
     <p>I find this distinction important because the two concepts can be easily mixed up, and separating them allows answering a few questions.</p>
